--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bra.website.kendrick",
+  "name": "Eirene CMS",
   "version": "0.0.1",
-  "description": "Black Rooster Audio - Website (Kendrick)",
+  "description": "Eirene CMS",
   "main": "index.js",
   "scripts": {
     "start": "ts-node ./src/server.ts",
@@ -12,19 +12,19 @@
   "license": "MIT",
   "dependencies": {
     "koa": "^2.5.1",
-    "koa-mustache": "0.0.2",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.3",
-    "pug": "^2.0.0-rc.4",
+    "mustache": "^2.3.0",
     "showdown": "^1.8.6"
   },
   "devDependencies": {
-    "@types/node": "^7.0.5",
     "@types/koa": "^2.0.45",
     "@types/koa-router": "^7.0.28",
     "@types/koa-static": "^4.0.0",
     "@types/koa-views": "^2.0.3",
+    "@types/mustache": "^0.8.30",
+    "@types/node": "^7.0.5",
     "@types/showdown": "^1.7.3",
     "nodemon": "^1.17.4",
     "ts-node": "^6.0.3",
