--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Eirene CMS",
+  "name": "EireneCMS",
   "version": "0.0.1",
-  "description": "Eirene CMS",
+  "description": "Eirene Content Management System",
   "main": "index.js",
   "scripts": {
     "start": "ts-node ./src/server.ts",
@@ -16,6 +16,7 @@
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.3",
     "mustache": "^2.3.0",
+    "pug": "^2.0.0-rc.4",
     "showdown": "^1.8.6"
   },
   "devDependencies": {
@@ -23,7 +24,6 @@
     "@types/koa-router": "^7.0.28",
     "@types/koa-static": "^4.0.0",
     "@types/koa-views": "^2.0.3",
-    "@types/mustache": "^0.8.30",
     "@types/node": "^7.0.5",
     "@types/showdown": "^1.7.3",
     "nodemon": "^1.17.4",
