--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "EireneCMS",
+  "name": "eirene-core",
   "version": "0.0.1",
-  "description": "Eirene Content Management System",
+  "description": "eirene CMS :: Content Management System",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./src/server.ts",
+    "start": "ts-node ./src/eirene.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-server": "nodemon --watch 'src/**/*' -e ts,tsx --exec 'ts-node' ./src/server.ts"
+    "watch-server": "nodemon --watch 'src/**/*' -e ts,tsx --exec 'ts-node' ./src/eirene.ts"
   },
   "author": "André Kirchner",
   "license": "MIT",
   "dependencies": {
+    "jstransformer-markdown-it": "^2.1.0",
     "koa": "^2.5.1",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.3",
     "mustache": "^2.3.0",
+    "node-sass": "^4.9.0",
     "pug": "^2.0.0-rc.4",
     "showdown": "^1.8.6"
   },
@@ -25,6 +27,7 @@
     "@types/koa-static": "^4.0.0",
     "@types/koa-views": "^2.0.3",
     "@types/node": "^7.0.5",
+    "@types/node-sass": "^3.10.32",
     "@types/showdown": "^1.7.3",
     "nodemon": "^1.17.4",
     "ts-node": "^6.0.3",
