--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "eirene CMS :: Content Management System",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./src/eirene.ts",
+    "build-css": "node-sass --output-style compressed ./src/styles/main.scss > ./src/static/css/main.css",
+    "start": "npm run build-css | ts-node ./src/eirene.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-server": "nodemon --watch 'src/**/*' -e ts,tsx --exec 'ts-node' ./src/eirene.ts"
+    "watch-server": "nodemon --watch 'src/**/*' -e ts,tsx --exec 'npm start'"
   },
   "author": "André Kirchner",
   "license": "MIT",
