--- a/package.json
+++ b/package.json
@@ -4,33 +4,36 @@
   "description": "eirene CMS :: Content Management System",
   "main": "index.js",
   "scripts": {
-    "build-css": "node-sass --output-style compressed ./src/styles/main.scss > ./src/static/css/main.css",
-    "start": "npm run build-css | ts-node ./src/eirene.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-server": "nodemon --watch 'src/**/*' -e ts,tsx --exec 'npm start'"
+    "eirene": "nodemon --watch 'src/**/*' -e ts,tsx,hbs,scss,yaml --exec 'ts-node ./src/eirene.ts'"
   },
   "author": "André Kirchner <andre.kirchner@cureon.de>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.0.0-alpha.6",
-    "jstransformer-markdown-it": "^2.1.0",
-    "koa": "^2.5.1",
-    "koa-router": "^7.4.0",
-    "koa-static": "^4.0.2",
-    "koa-views": "^6.1.3",
-    "mustache": "^2.3.0",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.11",
+    "js-yaml": "^3.11.0",
+    "markdown-it": "^8.4.1",
     "node-sass": "^4.9.0",
-    "pug": "^2.0.0-rc.4",
-    "showdown": "^1.8.6"
+    "pascal-case": "^2.0.1",
+    "promised-handlebars": "^2.0.1",
+    "q": "^1.5.1",
+    "web-request": "^1.0.7"
   },
   "devDependencies": {
-    "@types/koa": "^2.0.45",
-    "@types/koa-router": "^7.0.28",
-    "@types/koa-static": "^4.0.0",
-    "@types/koa-views": "^2.0.3",
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.11.1",
+    "@types/express-handlebars": "0.0.30",
+    "@types/handlebars": "^4.0.37",
+    "@types/js-yaml": "^3.11.1",
+    "@types/markdown-it": "0.0.4",
     "@types/node": "^7.0.5",
     "@types/node-sass": "^3.10.32",
-    "@types/showdown": "^1.7.3",
+    "@types/pascal-case": "^1.1.2",
+    "@types/q": "^1.5.0",
     "nodemon": "^1.17.4",
     "ts-node": "^6.0.3",
     "typescript": "^2.8.3"
