--- a/app/content/about.yaml
+++ b/app/content/about.yaml
@@ -1,10 +1,19 @@
 settings:
+  index: 1
+  title: About
   template: standard
-head:
-  title: eirene CMS | Core Example | About
+  hidden: true
+meta:
+  title: eirene CMS | Core Example | Index
   description: This is eirene
-body:
-  aboutText:
-    imageSRC: media/theme/eireneCMS.png
-    headline: But who made it?
-    text: eirene has been made by __André Kirchner__
+main:
+  class: content
+  content:
+    - module: article
+      data:
+        title: Hallo Eirene
+        text: Die Welt ist gut
+    - module: article
+      data:
+        title: Hallo Eirene
+        text: Die Welt ist gut
