--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eirene": "nodemon --watch 'app/**/*' -e ts,tsx,hbs,scss,yaml --exec 'ts-node ./app/eirene.ts'"
+    "eirene": "nodemon --watch '**/*' -e ts,tsx,hbs,scss,yaml --exec 'ts-node ./app/eirene.ts'"
   },
   "author": "André Kirchner <andre.kirchner@cureon.de>",
   "license": "MIT",
@@ -18,6 +18,7 @@
     "js-yaml": "^3.11.0",
     "markdown-it": "^8.4.1",
     "minify": "^3.0.5",
+    "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "node-sass": "^4.9.3",
     "pascal-case": "^2.0.1",
